# cognitive-ai-memory

./: .gitignore  BENCHMARKS.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  glama.json  index.html  llms.txt  memory_mcp.py  pyproject.toml  railway.toml  requirements.txt  sample_CLAUDE.md  server.json
.github/workflows/: docker-publish.yml
benchmarks/: fever_contradiction.py  hotpotqa_reasoning.py  locomo_mpnet.py  seed_demo_db.py
src/: app.py
src/db/: duckdb_schema.sql  migrate.py  schema.sql  sqlite_schema.sql
src/graph/: __init__.py  backend.py  graph_store.py  neo4j_backend.py  networkx_backend.py  svo_extract.py
src/jobs/: decay_job.py
src/routes/: memories.py  retrieve.py  ui.py
src/services/: api_keys.py  decay.py  embed.py  extract.py  extract_fallback.py  resolve.py  resolve_fallback.py  retrieve.py  session.py  utils.py
